--- a/WebApplicationControlBiblioteca/WebApplicationControlBiblioteca/Views/Home/Index.cshtml
+++ b/WebApplicationControlBiblioteca/WebApplicationControlBiblioteca/Views/Home/Index.cshtml
@@ -1,18 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head><br><br><br><br>
-      
+<head>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <title>Unicat</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Unicat project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="~/Content/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css">
     <link href="~/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    @*<link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.3.4/owl.carousel.min.js">*@
     <link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
     <link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/animate.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/Content/responsive.css">
 </head>
 <body>
@@ -21,7 +26,7 @@
 
         <!-- Header -->
 
-        <header class="header">
+        <header class="header" meta http-equiv="X-UA-Compatible" content="IE=edge">
 
             <!-- Top Bar -->
             <div class="top_bar">
@@ -67,14 +72,12 @@
                                 <nav class="main_nav_contaner ml-auto">
                                     <ul class="main_nav">
                                         <li class="active"><a href="#">@Html.ActionLink("Registro", "Index", "REGISTRO_LIBRO")</a></li>
-                                        <li><a href="courses.html">@Html.ActionLink("Estudiantes","Index", "ESTUDIANTEs")</a></li>
+                                        <li><a href="courses.html">@Html.ActionLink("Estudiantes", "Index", "ESTUDIANTEs")</a></li>
                                         <li><a href="blog.html">@Html.ActionLink("Libros", "Index", "LIBROes")</a></li>
                                     </ul>
-                                    <div class="search_button"><i class="fa fa-search" aria-hidden="true"></i></div>
-
+                                    <!--<div class="search_button"><i class="fa fa-search" aria-hidden="true"></i></div>-->
                                     <!-- Hamburger -->
-
-                                    <div class="shopping_cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
+                                    <!--<div class="shopping_cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>-->
                                     <div class="hamburger menu_mm">
                                         <i class="fa fa-bars menu_mm" aria-hidden="true"></i>
                                     </div>
@@ -120,7 +123,7 @@
             <nav class="menu_nav">
                 <ul class="main_nav">
                     <li class="active"><a href="#">@Html.ActionLink("Registro", "Index", "REGISTRO_LIBRO")</a></li>
-                    <li><a href="courses.html">@Html.ActionLink("Estudiantes","Index", "ESTUDIANTEs")</a></li>
+                    <li><a href="courses.html">@Html.ActionLink("Estudiantes", "Index", "ESTUDIANTEs")</a></li>
                     <li><a href="blog.html">@Html.ActionLink("Libros", "Index", "LIBROes")</a></li>
                 </ul>
             </nav>
@@ -128,7 +131,7 @@
 
         <!-- Home -->
 
-        <div class="home">
+        @*<div class="home">
             <div class="home_slider_container">
 
                 <!-- Home Slider -->
@@ -240,7 +243,7 @@
 
             <div class="home_slider_nav home_slider_prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
             <div class="home_slider_nav home_slider_next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
-        </div>
+        </div>*@
 
         <!-- Features -->
 
@@ -248,9 +251,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
+                        <div class="news_post_image"><img src="images/home_slider_1.jpg" alt=""></div>
                         <div class="section_title_container text-center">
-                            <h2 class="section_title">Welcome To Unicat E-Learning</h2>
-                            <div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
+                            <h2 class="section_title">Bienvenidos al modulo de registro y control de la Biblioteca</h2>
+                            <div class="section_subtitle"><p>En este moduolo usted podra realizar el control del registro del prestamo de libros, adicional podra ver en linea los libros que se encuentran actulmente disponibles y la relación de los libros que actualmente se encuentran en prestamo.</p></div>
                         </div>
                     </div>
                 </div>
@@ -260,7 +264,7 @@
                     <div class="col-lg-3 feature_col">
                         <div class="feature text-center trans_400">
                             <div class="feature_icon"><img src="images/icon_1.png" alt=""></div>
-                            <h3 class="feature_title">The Experts</h3>
+                            <h3 class="feature_title">@Html.ActionLink("Registro", "Index", "REGISTRO_LIBRO")</h3>
                             <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
                         </div>
                     </div>
@@ -269,7 +273,7 @@
                     <div class="col-lg-3 feature_col">
                         <div class="feature text-center trans_400">
                             <div class="feature_icon"><img src="images/icon_2.png" alt=""></div>
-                            <h3 class="feature_title">Book & Library</h3>
+                            <h3 class="feature_title">@Html.ActionLink("Libros", "Index", "LIBROes")</h3>
                             <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
                         </div>
                     </div>
@@ -278,7 +282,7 @@
                     <div class="col-lg-3 feature_col">
                         <div class="feature text-center trans_400">
                             <div class="feature_icon"><img src="images/icon_3.png" alt=""></div>
-                            <h3 class="feature_title">Best Courses</h3>
+                            <h3 class="feature_title">@Html.ActionLink("Estudiantes", "Index", "ESTUDIANTEs")</h3>
                             <div class="feature_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
                         </div>
                     </div>
@@ -884,15 +888,19 @@
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/Content/popper.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.min.js"></script>﻿-->
     <script src="~/plugins/greensock/TweenMax.min.js"></script>
     <script src="~/plugins/greensock/TimelineMax.min.js"></script>
-    <script src="~/plugins/scrollmagic/ScrollMagic.min.js"></script>
-    <script src="~/plugins/greensock/animation.gsap.min.js"></script>
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/plugins/greensock/ScrollToPlugin.min.js"></script>
-    <script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+    <!--<script src="~/plugins/greensock/animation.gsap.min.js"></script>-->
+    <script src="~/plugins/scrollMagic/ScrollMagic.min.js"></script>
+    <script src="~/plugins/greensock/ScrollToPlugin.min.js"></script>
     <script src="~/plugins/easing/easing.js"></script>
     <script src="~/plugins/parallax-js-master/parallax.min.js"></script>
     <script src="~/Scripts/custom.js"></script>
+    <script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+    <!--<script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.css"></script>-->
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/jquery.min.js"></script>
 </body>
-        </html>
+            </html>
